--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "jeldikk",
   "license": "ISC",
   "dependencies": {
     "redux": "^4.0.5"
